--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    buildFeatures{
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -54,7 +58,7 @@ dependencies {
     //Http Requests (Retrofit)
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Firebase (RT DB)
     implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
