Finished the project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.google.android.gms:play-services-maps:18.0.1'
 
-    // For developers using AndroidX in their applications
+    // Permission
     implementation 'pub.devrel:easypermissions:3.0.0'
 
 
